--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,13 +1,13 @@
 [theme]
 
 # Primary accent for interactive elements
-primaryColor = '#7792E3'
+primaryColor = '#F63366'
 
 # Background color for the main content area
-backgroundColor = '#273346'
+backgroundColor = '#FFFFFF'
 
 # Background color for sidebar and most interactive widgets
-secondaryBackgroundColor = '#B9F1C0'
+secondaryBackgroundColor = '#F0F2F6'
 
 # Color used for almost all text
-textColor = '#FFFFFF'
+textColor = '#262730'
